fixed Breadcrumb spacing.
git-svn-id: http://vreportetl01t.corp.hds.com/svnrepo/HDS.com-Revamp/hdscorp@598 b06f84e9-1d16-493f-8c0d-41b76f67d7c8

--- a/content/src/main/content/jcr_root/etc/clientlibs/hdscorp/main/css/common.css
+++ b/content/src/main/content/jcr_root/etc/clientlibs/hdscorp/main/css/common.css
@@ -341,7 +341,7 @@
 
 @media only screen and (max-width: 768px) {
     .hds-global-header .breadcrumb-container {
-        top: 200px;
+        /*top: 200px;*/ top:60px;
     }
     .header .sub-navigation-container .sub-navigation > ul > li {
         display: table;
